--- a/sba-interactive/index.html
+++ b/sba-interactive/index.html
@@ -1,1 +1,1 @@
-<!doctype html><title>Redirecting to: /</title><meta http-equiv="refresh" content="0;url=/"><meta name="robots" content="noindex"><link rel="canonical" href="https://sba-interactive.github.io/"><body>	<a href="/">Redirecting from <code>/sba-interactive/</code> to <code>/</code></a></body>
+<!doctypehtml><title>Redirecting to: /</title><meta content=0;url=/ http-equiv=refresh><meta content=noindex name=robots><link href=https://sba-interactive.github.io/ rel=canonical><body><a href=/>Redirecting from <code>/sba-interactive/</code> to <code>/</code></a>
