--- a/sba-interactive/index.html
+++ b/sba-interactive/index.html
@@ -1,1 +1,1 @@
-<!doctype html><title>Redirecting to: /</title><meta http-equiv="refresh" content="0;url=/"><meta name="robots" content="noindex"><link rel="canonical" href="https://sba-interactive.github.io/"><body>	<a href="/">Redirecting from <code>/sba-interactive/</code> to <code>/</code></a></body>
+<!doctype html><title>Redirecting to: /</title><meta http-equiv="refresh" content="0;url=/"><meta name="robots" content="noindex"><link rel="canonical" href="https://www.sbaint.eu/"><body>	<a href="/">Redirecting from <code>/sba-interactive/</code> to <code>/</code></a></body>
